<resources>
    <string name="app_name">Project: Navi</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_map">Map</string>
    <string name="mapSettingLabel">Map Type</string>
    <string-array name="mapLabels">
        <item>Satellite Map</item>
        <item>Building Map</item>
    </string-array>
    <string-array name="mapDraws">
        <item>s_map</item>
        <item>b_map</item>
    </string-array>
    <string name="mapButton">Toggle Map</string>
    <string name="buildingSetting">Building Map</string>
    <string name="satelliteSetting">Satellite Map</string>
    <string name="search_hint">Search Hint</string>
        <string-array name="b500">
            <item>Room 500</item>
            <item>Room 505</item>
            <item>Room 510</item>
            <item>Room 515</item>
            <item>Room 520</item>
            <item>Room 525</item>
            <item>Room 530</item>
            <item>Room 535</item>
            <item>Room 540</item>
            <item>Room 545</item>
            <item>Room 550</item>
            <item>Room 555</item>
            <item>Room 560</item>
        </string-array>
    <string name="calendarText">Calendar</string>
    <string name="pref_header_schedule">Schedule</string>
    <string name="daySchedule">Today\'s Schedule</string>
    <string name="per1">Period 1</string>
    <string name="per2">Period 2</string>
    <string name="per3">Period 3</string>
    <string name="per4">Period 4</string>
    <string name="per5">Period 5</string>
    <string name="per6">Period 6</string>
    <string name="per7">Period 7</string>
    <string name="courseError">Course Error</string>
    <string-array name="c0">
        <item>None</item> 
        <item>None</item> 
        <item>None</item> 
    </string-array>
    <string-array name="c1">
        <item>855</item> 
        <item>Social Science</item> 
        <item>Alley, Christina</item> 
    </string-array>
    <string-array name="c2">
        <item>1000</item> 
        <item>Adaptive PE</item> 
        <item>Adler, Kim</item> 
    </string-array>
    <string-array name="c3">
        <item>730</item> 
        <item>Learning Center</item> 
        <item>Bartell, Ross</item> 
    </string-array>
    <string-array name="c4">
        <item>Various Rooms</item> 
        <item>Math</item> 
        <item>Baer, Kevin</item> 
    </string-array>
    <string-array name="c5">
        <item>1452</item> 
        <item>English</item> 
        <item>Bell, Todd</item> 
    </string-array>
    <string-array name="c6">
        <item>540</item> 
        <item>Tech</item> 
        <item>Benrud, Todd</item> 
    </string-array>
    <string-array name="c7">
        <item>Library</item> 
        <item>DC</item> 
        <item>Boeger, Jodie</item> 
    </string-array>
    <string-array name="c8">
        <item>845</item> 
        <item>Social Studies</item> 
        <item>Bradley, Kevin</item> 
    </string-array>
    <string-array name="c9">
        <item>Traveling</item> 
        <item>LH</item> 
        <item>Brooks, Sarina</item> 
    </string-array>
    <string-array name="c10">
        <item>None</item> 
        <item>NJROTC</item> 
        <item>Brosnan, Mark</item> 
    </string-array>
    <string-array name="c11">
        <item>1454</item> 
        <item>English</item> 
        <item>Carlino, Kimberly</item> 
    </string-array>
    <string-array name="c12">
        <item>750</item> 
        <item>Math</item> 
        <item>Camara, Tony</item> 
    </string-array>
    <string-array name="c13">
        <item>620</item> 
        <item>Math</item> 
        <item>Cooke, Jeremy</item> 
    </string-array>
    <string-array name="c14">
        <item>1000</item> 
        <item>PE</item> 
        <item>Cooper, George</item> 
    </string-array>
    <string-array name="c15">
        <item>1110</item> 
        <item>Science</item> 
        <item>Cox, Jennifer</item> 
    </string-array>
    <string-array name="c16">
        <item>1125</item> 
        <item>Biology</item> 
        <item>Cripps, Stephan</item> 
    </string-array>
    <string-array name="c17">
        <item>220</item> 
        <item>MH Transition</item> 
        <item>Dixon, Sherrie</item> 
    </string-array>
    <string-array name="c18">
        <item>1000</item> 
        <item>PE</item> 
        <item>Earley, James</item> 
    </string-array>
    <string-array name="c19">
        <item>Drama</item> 
        <item>Drama</item> 
        <item>Ecker, Amity</item> 
    </string-array>
    <string-array name="c20">
        <item>1145</item> 
        <item>Physics</item> 
        <item>Eklund, Tom</item> 
    </string-array>
    <string-array name="c21">
        <item>1451</item> 
        <item>LH</item> 
        <item>Espley, Kristina</item> 
    </string-array>
    <string-array name="c22">
        <item>1457</item> 
        <item>English</item> 
        <item>Fanning, Michele</item> 
    </string-array>
    <string-array name="c23">
        <item>745</item> 
        <item>Math</item> 
        <item>Flisher, Matt</item> 
    </string-array>
    <string-array name="c24">
        <item>610</item> 
        <item>Math</item> 
        <item>Foggiano, Frank</item> 
    </string-array>
    <string-array name="c25">
        <item>Spec Ed</item> 
        <item>Spec Ed</item> 
        <item>Freeland, Bryan</item> 
    </string-array>
    <string-array name="c26">
        <item>1453</item> 
        <item>MH</item> 
        <item>Galvez, Gerardo</item> 
    </string-array>
    <string-array name="c27">
        <item>1408</item> 
        <item>English</item> 
        <item>Garrett, Amber</item> 
    </string-array>
    <string-array name="c28">
        <item>825</item> 
        <item>Social Studies</item> 
        <item>Ginn, Donald</item> 
    </string-array>
    <string-array name="c29">
        <item>1466</item> 
        <item>English</item> 
        <item>Ginn, LeAnne</item> 
    </string-array>
    <string-array name="c30">
        <item>535</item> 
        <item>Tech </item> 
        <item>Giovengo, Patrick</item> 
    </string-array>
    <string-array name="c31">
        <item>1000</item> 
        <item>PE</item> 
        <item>Goodrich, Danny</item> 
    </string-array>
    <string-array name="c32">
        <item>1105</item> 
        <item>Science</item> 
        <item>Hedberg, Paul</item> 
    </string-array>
    <string-array name="c33">
        <item>200</item> 
        <item>ASB</item> 
        <item>Hersch, Jeremy</item> 
    </string-array>
    <string-array name="c34">
        <item>720</item> 
        <item>Math</item> 
        <item>Heubach, Phlyn</item> 
    </string-array>
    <string-array name="c35">
        <item>810</item> 
        <item>Math</item> 
        <item>Hoeben, Trinity</item> 
    </string-array>
    <string-array name="c36">
        <item>1135</item> 
        <item>Chemistry</item> 
        <item>Holcomb, Michael</item> 
    </string-array>
    <string-array name="c37">
        <item>1414</item> 
        <item>Spanish</item> 
        <item>Jacobs, Anna</item> 
    </string-array>
    <string-array name="c38">
        <item>1462</item> 
        <item>English</item> 
        <item>Jensen, Laurie</item> 
    </string-array>
    <string-array name="c39">
        <item>Dance</item> 
        <item>Dance</item> 
        <item>Jiacoletti, Marta</item> 
    </string-array>
    <string-array name="c40">
        <item>545</item> 
        <item>Social Studies</item> 
        <item>Jones, Holly</item> 
    </string-array>
    <string-array name="c41">
        <item>550</item> 
        <item>Social Studies</item> 
        <item>Jones, Sean</item> 
    </string-array>
    <string-array name="c42">
        <item>1411</item> 
        <item>Spanish</item> 
        <item>Joyce, Mercedes</item> 
    </string-array>
    <string-array name="c43">
        <item>225</item> 
        <item>Photo</item> 
        <item>Jungman, Carolyn</item> 
    </string-array>
    <string-array name="c44">
        <item>1461</item> 
        <item>PE</item> 
        <item>Karlo, Thomas</item> 
    </string-array>
    <string-array name="c45">
        <item>Child Dev</item> 
        <item>Child Dev</item> 
        <item>Kirby, Lou Ann</item> 
    </string-array>
    <string-array name="c46">
        <item>850</item> 
        <item>Social Studies</item> 
        <item>Knight, Brent</item> 
    </string-array>
    <string-array name="c47">
        <item>1120</item> 
        <item>Science</item> 
        <item>La Berge, Stephanie</item> 
    </string-array>
    <string-array name="c48">
        <item>NJROTC</item> 
        <item>NJROTC</item> 
        <item>Lapp, Brent</item> 
    </string-array>
    <string-array name="c49">
        <item>1463</item> 
        <item>English</item> 
        <item>Leathers, Laura</item> 
    </string-array>
    <string-array name="c50">
        <item>1130/1140</item> 
        <item>Chemistry</item> 
        <item>Lee, Jeffrey</item> 
    </string-array>
    <string-array name="c51">
        <item>Auto</item> 
        <item>Auto</item> 
        <item>Lehr, Jordie</item> 
    </string-array>
    <string-array name="c52">
        <item>805</item> 
        <item>Social Studies</item> 
        <item>Long, Megan</item> 
    </string-array>
    <string-array name="c53">
        <item>820</item> 
        <item>Math</item> 
        <item>LoPrell, Kristen</item> 
    </string-array>
    <string-array name="c54">
        <item>530</item> 
        <item>Tech</item> 
        <item>Mafnas, Jan</item> 
    </string-array>
    <string-array name="c55">
        <item>1406</item> 
        <item>French</item> 
        <item>Mahmoudi, Azita</item> 
    </string-array>
    <string-array name="c56">
        <item>760</item> 
        <item>Math</item> 
        <item>McLaughlin, Marcy</item> 
    </string-array>
    <string-array name="c57">
        <item>1403</item> 
        <item>English</item> 
        <item>Miller, Lara</item> 
    </string-array>
    <string-array name="c58">
        <item>625</item> 
        <item>Tech Discovery</item> 
        <item>Morrison, Grace</item> 
    </string-array>
    <string-array name="c59">
        <item>1416</item> 
        <item>Tech Discovery</item> 
        <item>Nager, Judy</item> 
    </string-array>
    <string-array name="c60">
        <item>1464</item> 
        <item>Tech Discovery</item> 
        <item>Neel, Debora</item> 
    </string-array>
    <string-array name="c61">
        <item>865</item> 
        <item>Tech Discovery</item> 
        <item>Neill, John</item> 
    </string-array>
    <string-array name="c62">
        <item>1000</item> 
        <item>Tech Discovery</item> 
        <item>Odom, Melissa</item> 
    </string-array>
    <string-array name="c63">
        <item>1469</item> 
        <item>Tech Discovery</item> 
        <item>Ogilvie, Jeremy</item> 
    </string-array>
    <string-array name="c64">
        <item>1458</item> 
        <item>Tech Discovery</item> 
        <item>Ortiz, Sara</item> 
    </string-array>
    <string-array name="c65">
        <item>715</item> 
        <item>Math</item> 
        <item>Pagano, Brie</item> 
    </string-array>
    <string-array name="c66">
        <item>210</item> 
        <item>Art</item> 
        <item>Pagarigan, Gwenne</item> 
    </string-array>
    <string-array name="c67">
        <item>1407</item> 
        <item>Spanish</item> 
        <item>Pantoja, Carmelina</item> 
    </string-array>
    <string-array name="c68">
        <item>1413</item> 
        <item>Spanish</item> 
        <item>Park, Hillary</item> 
    </string-array>
    <string-array name="c69">
        <item>1404</item> 
        <item>English</item> 
        <item>Patterson, Daemein</item> 
    </string-array>
    <string name="pref_header_notifications">Notifications</string>
</resources>