<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="justenlosoya.projectnavi.SettingsActivity$MapPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_map" />

    <header
        android:fragment="justenlosoya.projectnavi.SettingsActivity$SchedulePreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_schedule" />

    <header
        android:fragment="justenlosoya.projectnavi.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

</preference-headers>
